# IT-LETI-2024-CXX-STL

./: README.md
lec1/: Лекция 1. Введение в ООП.pptx
lec1/examples/: cats-and-dogs.cpp  container.cpp  dynamic-array-2.cpp  dynamic-array-3.cpp  dynamic-array.cpp  new-delete.cpp  pointer.cpp  ref.cpp
lec2/: Лекция 2. Обобщенное программирование.pptx
lec2/examples/: container.cpp  static-array-1.cpp  template-functions.cpp  templates.cpp
lec2/examples/static-array-2/: CMakeLists.txt  main.cpp
lec2/examples/templates-problem/: CMakeLists.txt
lec2/examples/templates-problem/include/: dynamic-array.h
lec2/examples/templates-problem/src/: dynamic-array.cpp  main.cpp
lec3/: Лекция 3. Итераторы.pptx
lec3/examples/: dynamic-array.cpp  input-output-iterator.cpp  linked-list-const-iterator.cpp  linked-list-iterator.cpp  linked-list.cpp  print-container.cpp  range-based-for.cpp
lec4/: Лекция 4. Алгоритмы с парами итераторов.pptx
lec4/examples/: distance-count.cpp  equal-mismatch.cpp  find.cpp  lambda.cpp  lower-bound.cpp  remove.cpp  reverse.cpp  sort.cpp
lec5/: Лекция 5. Контейнеры. Часть 1.pptx
lec5/examples/: array.cpp  buffer.h  dynamic-array-2.cpp  dynamic-array.cpp  move-noexcept.cpp  owning-ptrs.cpp  owning.cpp  raii-2.cpp  raii-3.cpp  raii.cpp  rvalue-references.cpp  vector-2.cpp  vector.cpp
lec6/: Лекция 6. Контейнеры. Часть 2.pptx
lec6/examples/: stack.cpp
lec7/: Лекция 7. Словарные типы.pptx
lec7/examples/: any.cpp  copy-on-write.cpp  optional.cpp  string.cpp  (+4 more)
lec8/: Лекция 8. Умные указатели.pptx
lec9/: Лекция 9. Многопоточность.pptx
(+19 files in other folders)
